# P1Reader

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  platformio.ini
res/: remove_all_files_from_the_board.py
scripts/: Common.psm1  DownloadTools.ps1  OpenRepl.ps1  RemoveAllFilesFromTheBoard.ps1  RestartBoard.ps1  UploadMicropythonFwToBoard.ps1  UploadSourceCodeToBoard.ps1  UploadSourceCode_RestartBoard_OpenRepl.ps1
src/: main.cpp
src/Hal/: Esp32Board.h  IBoard.h  P1DataObserver.h  P1Reader.h  Pin.h  SerialPort.h
src/Logging/: Logging.h
src/Utils/: IOutputStream.h  Logging.h  NonCopyableAndNonMovable.h  StaticString.h
src/app/: dsmr_packet_receiving_task.py  main.py  web_server.py  wifi_connector.py
src/app/dsmr/: dsmr_packet_parser.py  dsmr_packet_receiver.py
src/app/hal/: hardware_board.py  system_info.py
src/test/dsmr/: test_dsmr_packet_parser.py  test_dsmr_packet_receiver.py
test/: PrecompiledHeader.h
test/Logging/: LoggingTest.cpp
test/Utils/: StaticStringTest.cpp
